# ModelOptStreaming

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: README.md  VALIDATION.md  compare_scales.py  compare_weight_values.py  kimi_k25_nvfp4.sh  serve_README.md  serve_nvfp4.sbatch  serve_nvfp4.sh  setup_vllm.sh  test_serving.py  validate_gate_up_matching.py
modelopt_streaming/: __init__.py  calibration.py  cli.py  decompress.py  formats.py  nvfp4.py  patterns.py  quantizer.py  utils.py
tests/: test_patterns.py
